# the-agent-maker

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUDIT-REPORT-2025-11-26.md  CLAUDE.md  E2E_TEST_FIXES_SUMMARY.md  FIX_COMPLETE.md  GEMINI-AUDIT-REPORT-2025-11-27.md  MOCKTOKENIZER-CLEANUP-SUMMARY.md  MYPY_FIXES_SUMMARY.md  MYPY_TYPE_FIX_REPORT.txt  PHASE2_3D_DELIVERABLES_MANIFEST.md  PHASE5_FORENSIC_AUDIT_REPORT.md  README.md  REFACTORING-PLAN-ISS-014.md  REMEDIATION-SUMMARY-2025-11-26.md  SPRINT-2-EXECUTION-PLAN.md  TYPE_ANNOTATION_FIX_REPORT.md  UI_FIXES_REQUIRED.md  coverage.xml  debug_imports.py  fix_ui_errors.py  mypy_results.txt  phase1_run_2.txt  phase1_run_3.txt  pyproject.toml  setup.py  test_output.txt  verify_html_fixes.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/hooks/: nasa_pot10_check.py
.github/workflows/: ci.yml  docs.yml  release.yml
config/: mypy.ini  pipeline_config.yaml  pytest.ini  requirements-dev.txt  requirements-ui.txt
config/phase_configs/: phase1_config.yaml  phase2_config.yaml  phase3_config.yaml  phase4_config.yaml  phase5_config.yaml  phase6_config.yaml  phase7_config.yaml  phase8_config.yaml
docs/: 3D_MODEL_COMPARISON_GUIDE.md  3D_MODEL_COMPARISON_QUICK_REF.md  3D_MODEL_VISUALIZATION_ARCHITECTURE.md  3D_MODEL_VISUALIZATION_DELIVERY_SUMMARY.md  ADAS_REFACTORING_COMPLETE.md  COMPREHENSIVE-TEST-REPORT-2025-11-27.md  DEPENDENCY_VERSIONS.md  DEVELOPER_READING_ORDER.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  FILE_MANIFEST.txt  FORENSIC-AUDIT-REMEDIATION-PLAN.md  GRAPHVIZ_INSTALLATION_STATUS.md  INDEX.md  INFRASTRUCTURE_SUMMARY.md  INFRASTRUCTURE_TEST_REPORT.md  ISS-004-SECURITY-REMEDIATION-PROGRESS.md  ISS-007-IMPLEMENTATION-SUMMARY.md  ISS-007-QUICK-REFERENCE.md  M3-REMEDIATION-PLAN.md  M7-VALIDATION-SUMMARY.md  PHASE1-COGNATE-FORENSIC-AUDIT.md  PHASE1_FINAL_STATUS.md  PHASE1_NUCLEAR_FIX_READY_TO_TEST.md  PHASE1_QUICK_START.md  PHASE1_READY_TO_TRAIN.md  PHASE1_SKILLS_WORKFLOW.md  PHASE2-EVOMERGE-FORENSIC-AUDIT.md  PHASE2_3D_QUICK_REFERENCE.md  PHASE2_3D_VISUALIZATION_INTEGRATION.md  PHASE2_3D_VISUALIZATION_MOCKUP.txt  PHASE2_3D_VISUALIZATION_SUMMARY.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_INTEGRATION_PATCH.py  PHASE2_QUICK_START.md  PHASE3-QUIETSTAR-FORENSIC-AUDIT.md  PHASE4-BITNET-FORENSIC-AUDIT.md  PHASE4-BITNET-UPGRADE-SUMMARY.md  PHASE4-QUICK-START.md  PHASE4_BITNET_IMPLEMENTATION_COMPLETE.md  PHASE4_BITNET_QUICK_START.md  (+20 more)
docs/graphviz/: 8-phase-pipeline-complete.dot  GRAPHVIZ_DIAGRAMS_SUMMARY.md  GRAPHVIZ_UPDATE_SUMMARY.md  INSTALL_GRAPHVIZ.md  README.md  agent-forge-master-flow.dot  cicd-pipeline-flow.dot  infrastructure-systems.dot  install_graphviz_admin.ps1  phase-integration-flow.dot  quality-assurance-flow.dot  render_all.bat  render_all.sh  testing-infrastructure-flow.dot  week-1-12-timeline.dot
docs/integration/: BITNET_COMPATIBILITY_ALL_PHASES.md  PHASE1-4_WANDB_INTEGRATION.md  PHASES_UI_INTEGRATION_GUIDE.md  UI_INTEGRATION_COMPLETE.md  UI_INTEGRATION_README.md  WANDB_INTEGRATION_GUIDE.md  WANDB_ONLINE_INTEGRATION_GUIDE.md
docs/phases/: PHASE5_PHASE6_DOCUMENTATION_COMPLETE.md
docs/reports/: AgentMaker-FINAL-STATUS-2025-11-26.md  AgentMaker-IMPLEMENTATION-STATUS-2025-11-26.md  BEFORE_AFTER_COMPARISON.md  DESIGN_SYSTEM_COMPLETE.md  HTML_RENDERING_FIX_SUMMARY.md  PHASE3_IMPLEMENTATION_DELIVERY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_DELIVERABLES.txt  PHASE6_GAPS_RESOLVED.md  PHASE6_IMPLEMENTATION_COMPLETE.md  PIPELINE_OVERVIEW_UPGRADE_SUMMARY.md  STREAMLIT_UI_UPGRADE_SUMMARY.md  UI_TYPE_FIXES_REPORT.md
docs/v1-reference/: README.md
docs/v2-implementation/: REORGANIZATION_COMPLETE.md
docs/v2-planning/: ISSUE_RESOLUTION_MATRIX.md  PHASE1-3_CONSISTENCY_ANALYSIS.md  PHASE1-4_COMPLETE_SUMMARY.md  PHASE1-4_COMPREHENSIVE_PLAN_V2.md  PHASE1-4_IMPLEMENTATION_CHECKLIST.md  PHASE1-4_MASTER_INDEX.md  PHASE1-4_PREMORTEM_V2.md  PHASE1-4_UI_SPECIFICATION_V2.md  PHASE2_DAY3_SUMMARY.md  PHASE2_DAY4_SUMMARY.md  PHASE2_DAY6_PLAN.md  PHASE2_DAY7_PLAN.md  PHASE2_IMPLEMENTATION_CHECKLIST.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_PROGRESS.md  PHASE2_PROGRESS_UPDATED.md  PHASE2_WEEK1_COMPLETE.md  PHASE4_TO_PHASE5_HANDOFF.md  PHASE5-8_V1_VS_V2_RECONCILIATION.md  (+6 more)
docs_source/: Makefile  architecture.rst  conf.py  getting_started.rst  index.rst
examples/: phase3_step1_example.py  phase3_step2_example.py
scripts/: check_function_length.py  check_test_coverage.py  cleanup_zombie_processes.py  download_phase1_datasets.py  downsample_hellaswag.py  run_tests.py  test_act_halting.py  test_all_infrastructure.py  test_phase1_models.py  test_streamlit_ui.py  train_phase1_cached.py  train_phase1_nuclear_fix.py  validate_infrastructure.py  validate_phase4.py
src/: README.md  __init__.py
tests/: __init__.py  conftest.py  test_model_comparison_3d.py  verify_phase1_orchestration.py
(+405 files in other folders)
